feat: adiciona funcionalidades de ranking e contagem de convites para assinantes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,12 @@
     "bitnami",
     "hget",
     "hincrby",
-    "Jonatas"
-  ]
+    "Jonatas",
+    "WITHSCORES",
+    "zincrby",
+    "zrevrange",
+    "zrevrank",
+    "zscore"
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
