--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "build": "tsup-node",
+    "start": "node dist/server.mjs",
     "check": "biome format ./src",
     "write": "biome format --write ./src"
   },
@@ -26,6 +30,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.4",
     "drizzle-kit": "^0.30.4",
+    "tsup": "^8.3.6",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
